docs/apache-airflow-providers-dbt-cloud/2.0.0/_sources/_api/airflow/providers/dbt/cloud/sensors/dbt/index.rst.txt
:py:mod:`airflow.providers.dbt.cloud.sensors.dbt`
=================================================

.. py:module:: airflow.providers.dbt.cloud.sensors.dbt


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.dbt.cloud.sensors.dbt.DbtCloudJobRunSensor




.. py:class:: DbtCloudJobRunSensor(*, dbt_cloud_conn_id = DbtCloudHook.default_conn_name, run_id, account_id = None, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Checks the status of a dbt Cloud job run.

   .. seealso::
       For more information on how to use this sensor, take a look at the guide:
       :ref:`howto/operator:DbtCloudJobRunSensor`

   :param dbt_cloud_conn_id: The connection identifier for connecting to dbt Cloud.
   :param run_id: The job run identifier.
   :param account_id: The dbt Cloud account identifier.

   .. py:attribute:: template_fields
      :annotation: = ['dbt_cloud_conn_id', 'run_id', 'account_id']

      

   .. py:method:: poke(self, context)

      Function that the sensors defined while deriving this class should
      override.



